First commit after writing a few functions

--- a/learningMaths.vcxproj
+++ b/learningMaths.vcxproj
@@ -133,7 +133,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Project1.cpp" />
+    <ClCompile Include="basic_maths.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="basic_maths.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
