--- a/learningMaths.vcxproj.filters
+++ b/learningMaths.vcxproj.filters
@@ -15,13 +15,17 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="basic_maths.cpp">
+    <ClCompile Include="basic_trig_functions.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="basic_maths.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
+    <ClCompile Include="basic_maths_functions.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="geometry_functions.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
